--- a/miniprogram/components/side-menu/SideMenu.wxml
+++ b/miniprogram/components/side-menu/SideMenu.wxml
@@ -2,9 +2,14 @@
 <view class="side-menu-wrapper">
     <view class="user-info">
         <view class="user-avatar">
-            <van-icon name="user-circle-o" />
+
+            <image wx:if="{{userInfo}}" style="width: 50px; height: 50px;border-radius:50%;" mode="cover" src="{{userInfo.avatarUrl}}" />
+            <van-icon wx:else name="user-circle-o" />
         </view>
-        <view class="user-name">Helti</view>
+        <view wx:if="{{userInfo}}" class="user-name">{{userInfo.nickName}}</view>
+        <button wx:else class='auth-btn' lang="zh_CN" bindgetuserinfo='getUserInfo' open-type='getUserInfo'>点击登录</button>
+
+
     </view>
     <view class="menu-list">
         <van-cell-group>
