--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,5 +1,6 @@
 page{
     background: #A9C3F8;
+    padding-bottom: 120rpx;
 }
 .page-top{
     display: flex;
@@ -19,4 +20,9 @@ page{
 
 .top-right{
     font-size: 20px;
+}
+
+/* todo-input */
+.todo-input-wrapper{
+    padding: 20rpx;
 }
