--- a/miniprogram/components/todo-item/TodoItem.wxml
+++ b/miniprogram/components/todo-item/TodoItem.wxml
@@ -2,11 +2,11 @@
 <view class="todo-item-wrapper">
     <view class="todo-item-content">
         <view class="todo-check">
-        <van-checkbox bind:change="onChange" value="{{ checked }}"></van-checkbox>
+        <van-checkbox data-todo-item="{{todo}}" bind:change="onChange" value="{{ checked }}"></van-checkbox>
         </view>
         <view class="todo-body" bindtap="onClickTodoItem">
-            <view class="todo-title van-ellipsis" style="{{checked ? 'color:#a0a0a0;text-decoration:line-through;' :''}}">代办标题</view>
-            <view class="todo-des van-ellipsis">日期：2010-9-8</view>
+            <view class="todo-title van-ellipsis" style="{{checked ? 'color:#a0a0a0;text-decoration:line-through;' :''}}">{{todo.description}}</view>
+            <!-- <view class="todo-des van-ellipsis">日期：{{todo.create_date_format}}</view> -->
         </view>
         <view class="todo-operate"  bindtap="onClickTodoItemRight" ><van-icon color="{{checked ? '#A9C3F8' :''}}" name="star-o" /></view>
     </view>
