--- a/miniprogram/pages/todo-detail/todo-detail.wxml
+++ b/miniprogram/pages/todo-detail/todo-detail.wxml
@@ -23,8 +23,8 @@
                     <van-icon name="flag-o" />
                 </view>
                 <view class="setting-body">
-                    <view bindtap="editTodoToMydayHandle" wx:if="{{todo.isMyday}}">已添加到“我的一天”</view>
-                    <view bindtap="editTodoToMydayHandle" wx:else>添加到“我的一天”</view>
+                    <view data-type="{{false}}" bindtap="editTodoToMydayHandle" wx:if="{{todo.isMyday}}">已添加到“我的一天”</view>
+                    <view data-type="{{true}}" bindtap="editTodoToMydayHandle" wx:else>添加到“我的一天”</view>
                 </view>
             </view>
 
@@ -32,9 +32,9 @@
                 <view class="setting-icon">
                     <van-icon name="calender-o" />
                 </view>
-                <view class="setting-body">
-                    <view wx:if="{{todo.due_date}}">3月20日到期 周五 到期</view>
-                    <view wx:else>添加截止日期</view>
+                <view class="setting-body" bindtap="openDatePickPopup">
+                    <view wx:if="{{todo.due_date}}">{{todo.due_date_format}} 到期</view>
+                    <view  wx:else>添加截止日期</view>
                 </view>
             </view>
 
@@ -53,5 +53,10 @@
             </view>
         </view>
     </view>
+    <!-- 底部时间选择 -->
+    <!-- 右侧菜单 -->
+    <van-popup show="{{ datePickVisible }}" position="bottom" bind:close="closeDatePickPopup">
+        <van-datetime-picker type="date" bind:confirm="confirmDatePick" bind:cancel="cancelDatePick" value="{{ currentDate }}" min-date="{{ minDate }}" formatter="{{ formatter }}" />
 
+    </van-popup>
 </view>
