改为云函数查询

--- a/miniprogram/pages/todo-list/todo-list.wxml
+++ b/miniprogram/pages/todo-list/todo-list.wxml
@@ -1,10 +1,10 @@
 <!--miniprogram/pages/important/important.wxml-->
 <view class="page important-wrapper">
      <view class="page-content">
-        <todo-list></todo-list>
+        <todo-list todo-list="{{todoList}}"></todo-list>
     </view>
      <!-- todo input -->
     <view class="todo-input-wrapper fixed-bottom">
-        <todo-input></todo-input>
+        <todo-input page-type="{{2}}"></todo-input>
     </view>
 </view>
