--- a/miniprogram/pages/todo-list/todo-list.wxml
+++ b/miniprogram/pages/todo-list/todo-list.wxml
@@ -5,6 +5,6 @@
     </view>
      <!-- todo input -->
     <view class="todo-input-wrapper fixed-bottom">
-        <todo-input page-type="{{2}}"></todo-input>
+        <todo-input bind:success="onAddTodoSuccess" page-type="{{2}}"></todo-input>
     </view>
 </view>
