--- a/miniprogram/components/todo-input/TodoInput.wxml
+++ b/miniprogram/components/todo-input/TodoInput.wxml
@@ -6,7 +6,7 @@
     <view class="input-component-wrapper">
         <input bindinput="todoInputHandle" bindconfirm="todoInputConfirmHandle" class="input-component" value="{{todoValue}}" placeholder-style="color:#fff;" placeholder="请输入代办事项" />
     </view>
-    <view class="enter-icon">
+    <view bindtap="todoInputConfirmHandle" class="enter-icon">
         <van-icon name="upgrade" />
     </view>
 </view>
