--- a/miniprogram/components/todo-input/TodoInput.wxml
+++ b/miniprogram/components/todo-input/TodoInput.wxml
@@ -4,9 +4,11 @@
         <van-icon name="plus" />
     </view>
     <view class="input-component-wrapper">
-        <input bindinput="todoInputHandle" bindconfirm="todoInputConfirmHandle" class="input-component" value="{{todoValue}}" placeholder-style="color:#fff;" placeholder="请输入代办事项" />
+        <input bindinput="todoInputHandle" bindconfirm="todoInputConfirmHandle" class="input-component"
+            value="{{todoValue}}" placeholder-style="color:#fff;" placeholder="请输入代办事项" />
     </view>
     <view bindtap="todoInputConfirmHandle" class="enter-icon">
         <van-icon name="upgrade" />
     </view>
+
 </view>
