--- a/miniprogram/components/todo-item/TodoItem.wxss
+++ b/miniprogram/components/todo-item/TodoItem.wxss
@@ -10,7 +10,8 @@
     -webkit-line-clamp: 2;
 }
 
-.van-multi-ellipsis--l2, .van-multi-ellipsis--l3 {
+.van-multi-ellipsis--l2,
+.van-multi-ellipsis--l3 {
     display: -webkit-box;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -27,7 +28,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding:0 20rpx;
+    padding: 0 20rpx;
     height: 100rpx;
     /* border-bottom: 1px solid #dedede; */
     margin-bottom: 4px;
@@ -37,6 +38,7 @@
     width: 580rpx;
     padding-left: 20rpx;
     font-size: 14px;
+    min-height: 30rpx;
 }
 
 .todo-body .todo-des {
