--- a/miniprogram/components/todolist/todolist.wxml
+++ b/miniprogram/components/todolist/todolist.wxml
@@ -5,7 +5,10 @@
     </view>
     <view wx:else>
         <view wx:if="{{todoList.length > 0}}" class="todo-list-content">
-            <todo-item bind:checkboxchange="checkboxChange" bind:clicktodoitem="clickTodoItemHandle" bind:clicktodoright="clickTodoItemRight" todo="{{item}}" data-todo="{{item}}" wx:for="{{todoList}}" wx:key="_id" />
+            <todo-item bind:checkboxchange="checkboxChange" bind:clicktodoitem="clickTodoItemHandle"
+                bind:removesuccess="removesuccessHandle"
+                bind:clicktodoright="clickTodoItemRight" todo="{{item}}" data-todo="{{item}}" wx:for="{{todoList}}"
+                wx:key="_id" />
         </view>
         <view wx:else class="no-data">
             <image src="../../images/no-data.png"></image>
